# workflow-approvals

./: .gitignore  databricks.yml  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
resources/: workflow-approval-app.yml  workflows.yml
src/app/: app.py  app.yaml
src/app/templates/: approval.html  approved.html  base.html  error.html
src/notebooks/: approvals_init.ipynb  send_approval.ipynb  some_job_task.ipynb
